# NetlistParse.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/netlist-cabi/: Cargo.toml  build.rs  cbindgen.toml
crates/netlist-cabi/src/: lib.rs
crates/netlist-cabi/tests/: c_smoke.c  run_c_smoke.sh
crates/netlist-cxx/: Cargo.toml  README.md
crates/netlist-cxx/demo/: CMakeLists.txt  example.scs  smoke.cpp
crates/netlist-cxx/src/: lib.rs
crates/netlist-py/: Cargo.toml  pyproject.toml
crates/netlist-py/src/: lib.rs
crates/netlist-py/tests/: test_smoke.py
crates/netlist-syntax/: Cargo.toml
crates/netlist-syntax/examples/: dump_spectre.rs
crates/netlist-syntax/src/: ast.rs  dump.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  spectre_ast.rs  spectre_keywords.rs  spectre_lexer.rs  spectre_parser.rs  spectre_syntax_kind.rs  syntax_kind.rs
crates/netlist-syntax/tests/: differential.rs  extensions.rs  robustness.rs  roundtrip.rs  sky130_pdk.rs  spectre_differential.rs  xyce.rs
docs/: spice_support_design.md  spice_support_plan.md  vacask_rust_parser_integration_plan.md
docs/superpowers/plans/: 2026-07-22-vacask-explicit-include-dialect.md  2026-07-22-vacask-optional-spice-integration.md
docs/superpowers/specs/: 2026-07-22-vacask-explicit-include-dialect-design.md  2026-07-22-vacask-optional-spice-integration-design.md
tests/: regen_expected.sh
tests/corpus/: a.sp  b.sp  b1_dev.sp  b1_dots.sp  b1_inc.sp  b1_osdi.sp  c.sp  controlled_linear.sp  controlled_poly.sp  controlled_table.sp  controlled_value.sp  cov_expr_ops.sp  d.sp  data_basic.sp  data_single_col.sp  e.sp  err_binop.sp  err_paramlist.sp  err_parens.sp  err_ternary.sp  ex_1n3064.sp  ex_microcap.sp  ext_devices.sp  ext_nodeset.sp  ext_xyce_y.sp  f.sp  g.sp  h.sp  i.sp  if_basic.sp  if_elseif.sp  if_nested.sp  if_noelse.sp  j.sp  lib_block.sp  lib_block_named.sp  lib_include.sp  sky130_inverter.sp  wf_ic_1.sp  wf_ic_2.sp  (+7 more)
tests/corpus/spectre/analysis/: ac.scs  dc.scs  err_analysis_missing_value.scs  err_missing_rparen.scs  err_unknown_stmt.scs  expr_args.scs  noise.scs  sp.scs  sweep_montecarlo.scs  tran.scs  xf_pz.scs
tests/corpus/spectre/arrays_langswitch/: array_expressions.scs  array_mixed_names.scs  array_params.scs  array_sweep.scs  err_array_binary.scs  err_array_unterminated.scs  lang_swap_spice_start.cir  simulator_lang_spectre.scs  simulator_lang_swap.scs
tests/corpus/spectre/conditional/: compound_condition.scs  err_braceless.scs  err_missing_rbrace.scs  err_missing_rparen.scs  if_else.scs  if_elseif_else.scs  if_only.scs  inline_binning.scs  multi_elseif.scs  subckt_binning.scs
tests/corpus/spectre/control_named/: alter.scs  altergroup.scs  check.scs  checklimit.scs  err_alter_missing_value.scs  err_recover_midfile.scs  err_typo_keyword.scs  err_unknown_statement.scs  info.scs  options.scs  paramtest.scs  set.scs  shell.scs
tests/corpus/spectre/control_save_ic/: err_ic_missing_eq.scs  err_nodeset_missing_value.scs  err_save_dangling_colon.scs  ic_basic.scs  nodeset_basic.scs  save_currents.scs  save_hier.scs  save_index.scs  save_multi.scs  save_node.scs  save_pwr_probe.scs
tests/corpus/spectre/funcdecl/: builtin_calls.scs  comment_body.scs  const_body.scs  err_missing_return.scs  err_missing_semicolon.scs  err_nonreal_arg.scs  four_args.scs  nested_userfunc.scs  one_arg.scs  pow_body.scs  two_args.scs
tests/corpus/spectre/include_global/: ahdl_include.scs  (+11 more)
tests/expected/: a.txt  b.txt  b1_dev.txt  b1_dots.txt  b1_inc.txt  b1_osdi.txt  c.txt  controlled_linear.txt  controlled_poly.txt  controlled_table.txt  controlled_value.txt  cov_expr_ops.txt  d.txt  data_basic.txt  data_single_col.txt  e.txt  err_binop.txt  err_paramlist.txt  err_parens.txt  err_ternary.txt  ex_1n3064.txt  ex_comprt.txt  ex_data.txt  ex_global.txt  ex_hspice_isms.txt  ex_ic0.txt  ex_measure.txt  ex_microcap.txt  ex_names.txt  ex_options.txt  ex_print.txt  ex_rc_ladder.txt  ex_sources.txt  ex_tran.txt  ex_voltage_divider.txt  ext_devices.txt  ext_nodeset.txt  ext_xyce_cmds.txt  ext_xyce_y.txt  f.txt  (+21 more)
tests/sim/: spectre_inverter.scs  spice_inverter.cir
tests/xyce/: full.cir
tools/: port_forms.workflow.js  validate_ngspice.sh  validate_xyce.sh
(+177 files in other folders)
