[package]
name = "netlist-cabi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Lib basename differs from the header/module name to avoid a `.so` filename
# clash with the PyO3 crate (which must be importable as `netlist_parser`).
[lib]
name = "netlist_cabi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
netlist-syntax = { path = "../netlist-syntax" }
rowan.workspace = true

[build-dependencies]
cbindgen = "0.27"
