[package]
name = "netlist-py"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "netlist_parser"
crate-type = ["cdylib"]

[dependencies]
netlist-syntax = { path = "../netlist-syntax" }
rowan.workspace = true
# abi3 limited API → one wheel loads on any CPython ≥ 3.9 (incl. 3.14 here).
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
